Fixes #30 - add a noticeboard to "My coven" page, visible to all coven members and editable by leader and captains.

--- a/src/TT.Web/Content/custom.scss
+++ b/src/TT.Web/Content/custom.scss
@@ -252,6 +252,21 @@ li {
   text-align: justify;
 }
 
+#noticeboardTitle {
+    font-size: 25px;
+    padding: 4px 10px;
+    text-align: center;
+    color: black;
+}
+
+#noticeboardMessage {
+    font-size: 15px;
+    border: 1px solid black;
+    padding: 4px 10px;
+    text-align: center;
+    color: black;
+}
+
 #RecentActivityLog {
   clear: both;
   background: $notificationBoxColor;
